--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
     "html5-qrcode": "^2.3.8",
+    "lucide-react": "^0.477.0",
     "next": "15.1.6",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
