--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
+    "framer-motion": "^12.4.10",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.477.0",
     "next": "15.1.6",
