--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://Satish:Kidocode@cluster0.mjfwk.mongodb.net/QuizApp?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://Satish:Kidocode@cluster0.mjfwk.mongodb.net/QuizApp?retryWrites=true&w=majority&appName=Cluster0&tls=true
