--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.7",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.4.10",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.477.0",
